--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cleanclimate",
+  "name": "webmaster",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,23 +10,19 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.0",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.0.6",
     "gsap": "^3.12.5",
-    "next": "14.1.0",
+    "locomotive-scroll": "^4.1.4",
+    "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^2.2.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/locomotive-scroll": "^4.1.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.3.3"
+    "eslint-config-next": "14.0.3",
+    "typescript": "^5"
   }
 }
