--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cleanclimate",
   "version": "0.1.0",
   "private": true,
+  "sideEffects": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,22 +11,21 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.0",
-    "@react-three/drei": "^9.99.4",
+    "@next/bundle-analyzer": "^14.1.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.6",
     "gsap": "^3.12.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.2",
     "simplex-noise": "^4.0.1",
-    "tailwind-merge": "^2.2.1",
-    "three": "^0.161.0"
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/three": "^0.161.2",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
