--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@gsap/react": "^2.1.0",
     "@next/bundle-analyzer": "^14.1.0",
+    "@types/body-scroll-lock": "^3.1.2",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.6",
     "gsap": "^3.12.5",
